--- a/arduino/samd/libraries/SenseBox/library.properties
+++ b/arduino/samd/libraries/SenseBox/library.properties
@@ -1,9 +1,9 @@
-name=SenseBox
+name=senseBox
 version=1.0.0
-author=SenseBox
-maintainer=SenseBox
-sentence=SenseBox Examples
-paragraph=SenseBox Examples
+author=senseBox
+maintainer=senseBox
+sentence=senseBox MCU Examples
+paragraph=senseBox MCU Examples
 category=Other
 url=http://www.sensebox.de
 architectures=*
