--- a/arduino/samd/libraries/SenseBoxIO/library.properties
+++ b/arduino/samd/libraries/SenseBoxIO/library.properties
@@ -1,9 +1,9 @@
-name=SenseBoxIO
+name=senseBoxIO
 version=1.0.0
-author=SenseBox
-maintainer=SenseBox
-sentence=SenseBox MCU I/O Library
-paragraph=SenseBox MCU I/O Library
+author=senseBox
+maintainer=senseBox
+sentence=senseBox MCU I/O Library
+paragraph=senseBox MCU I/O Library
 category=Other
 url=http://www.sensebox.de
 architectures=*
