--- a/samd/libraries/senseBox/library.properties
+++ b/samd/libraries/senseBox/library.properties
@@ -6,4 +6,4 @@ sentence=senseBox MCU Examples
 paragraph=senseBox MCU Examples
 category=Other
 url=http://www.sensebox.de
-architectures=*
+architectures=samd
