--- a/samd/libraries/senseBoxIO/library.properties
+++ b/samd/libraries/senseBoxIO/library.properties
@@ -6,4 +6,4 @@ sentence=senseBox MCU I/O Library
 paragraph=senseBox MCU I/O Library
 category=Other
 url=http://www.sensebox.de
-architectures=*
+architectures=samd
