--- a/arduino/samd/libraries/ArduinoECCX08/library.properties
+++ b/arduino/samd/libraries/ArduinoECCX08/library.properties
@@ -1,10 +1,10 @@
 name=ArduinoECCX08
-version=1.0.2
+version=1.0.3
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
 sentence=Arduino Library for the Atmel/Microchip ECC508 and ECC608 crypto chips
 paragraph=
 category=Communication
 url=https://github.com/arduino-libraries/ArduinoECCX08
-architectures=*
+architectures=samd
 includes=ArduinoECCX08.h
