--- a/arduino/samd/libraries/ArduinoBearSSL/library.properties
+++ b/arduino/samd/libraries/ArduinoBearSSL/library.properties
@@ -1,5 +1,5 @@
 name=ArduinoBearSSL
-version=1.2.0
+version=1.3.0
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
 sentence=Port of BearSSL to Arduino.
@@ -8,3 +8,4 @@ category=Communication
 url=https://github.com/arduino-libraries/ArduinoBearSSL
 architectures=*
 includes=ArduinoBearSSL.h
+depends=ArduinoECCX08
