--- a/arduino/samd/libraries/Adafruit_HDC1000/library.properties
+++ b/arduino/samd/libraries/Adafruit_HDC1000/library.properties
@@ -1,5 +1,5 @@
 name=Adafruit HDC1000 Library
-version=1.0.2
+version=2.0.0
 author=Adafruit
 maintainer=Adafruit <info@adafruit.com>
 sentence=Arduino library for HDC1000 and HDC1008 sensors.
@@ -7,3 +7,4 @@ paragraph=Designed specifically to work with the HDC1008 breakout in the Adafrui
 category=Sensors
 url=https://github.com/adafruit/Adafruit_HDC1000_Library
 architectures=*
+depends=Adafruit BusIO
